--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 :root {
-	--main: #563d7c;
-	--hover: #8570a5;
+	/* --background: #563d7c; */
+	--main: #007bff;
+	/* --hover: #8570a5; */
+	--hover: #0263ca;
 	--white: #f3edfc;
-	--feedback: #444;
+	/* --feedback: #444; */
 	--border: #ccc;
 }
 
@@ -16,6 +18,96 @@ body {
 	font-family: 'Poppins', sans-serif;
 	font-size: 1.6rem;
 	font-size: 120%;
+	background: var(--main);
 }
 
+.start_btn, .info_box {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
 
+/* Start button */
+.start_btn button {
+	font-size: 2.5rem;
+	color: var(--main);
+	padding: 1.5rem 3rem;
+	outline: none;
+	border: none;
+	border-radius: 0.5rem;
+	background-color: var(--white);
+	cursor: pointer;
+}
+
+.info_box {
+	display: none;
+	width: 54rem;
+	background-color: var(--white);
+	border-radius: 0.5rem;
+}
+
+.info_box .info_title {
+	height: 6rem;
+	width: 100%;
+	border-bottom: 0.1rem solid var(--border);
+	display: flex;
+	align-items: center;
+	padding: 0 3.5rem;
+	font-size: 2rem;
+	font-weight: 600;
+}
+
+.info_box .info_list {
+	padding: 1.5rem 3.5rem;
+}
+
+.info_box .info_list .info {
+	margin: 0.5rem 0;
+	font-size: 1.6rem;
+}
+
+.info_box .info_list .info span{
+	font-weight: 600;
+	color:var(--main) ;
+}
+
+.info_box .buttons {
+	height: 6rem;
+	display: flex;
+	align-items: center;
+	justify-content: flex-end;
+	padding: 0 3.5rem;
+	border-top: 0.1rem solid var(--border);
+}
+
+.info_box .buttons button {
+	margin: 0 0.5rem;
+	height: 4rem;
+	width: 10rem;
+	border: 0.1rem solid var(--main);
+	border-radius: 0.5rem;
+	color: var(--white);
+	font-size: 1.6rem;
+	font-weight: 500;
+	cursor: pointer;
+	transition: all 0.3s ease;
+}
+
+.buttons button.restart { 
+	color: var(--white);
+	background: var(--main);
+}
+
+.buttons button.restart:hover { 
+	background: var(--hover);
+}
+
+.buttons button.quit{ 
+	color: var(--main);
+}
+
+.buttons button.quit:hover { 
+	color: var(--white);
+	background: var(--main);
+}
