--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap");
 
 :root {
 	/* --background: #563d7c; */
@@ -7,7 +7,18 @@
 	--hover: #0263ca;
 	--white: #f3edfc;
 	/* --feedback: #444; */
+	--timer: #cce5ff;
 	--border: #ccc;
+	--timer-border: #b8daff;
+	/* --time-text: #f3edfc; */
+	--time-text-bg: #343a40;
+}
+
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	font-family: 'Poppins', sans-serif;
 }
 
 html {
@@ -15,45 +26,47 @@ html {
 }
 
 body {
-	font-family: 'Poppins', sans-serif;
-	font-size: 1.6rem;
-	font-size: 120%;
 	background: var(--main);
 }
 
-.start_btn, .info_box {
+.start_btn,
+.info_box,
+.quiz_box {
 	position: absolute;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
+	box-shadow: 0 0.4rem 0.8rem 0 rgba(0,0,0,0.2), 0 0.6rem 2rem 0 rgba(0,0,0,0.19);
 }
 
 /* Start button */
 .start_btn button {
 	font-size: 2.5rem;
+	font-weight: 500;
 	color: var(--main);
 	padding: 1.5rem 3rem;
 	outline: none;
 	border: none;
 	border-radius: 0.5rem;
-	background-color: var(--white);
+	background: var(--white);
 	cursor: pointer;
 }
 
+/* Info box */
 .info_box {
 	display: none;
 	width: 54rem;
-	background-color: var(--white);
+	background: var(--white);
 	border-radius: 0.5rem;
 }
 
 .info_box .info_title {
 	height: 6rem;
-	width: 100%;
 	border-bottom: 0.1rem solid var(--border);
 	display: flex;
 	align-items: center;
-	padding: 0 3.5rem;
+	padding: 0 3rem;
+	border-radius: 0.5rem 0.5rem 0 0;
 	font-size: 2rem;
 	font-weight: 600;
 }
@@ -67,9 +80,9 @@ body {
 	font-size: 1.6rem;
 }
 
-.info_box .info_list .info span{
+.info_box .info_list .info span {
 	font-weight: 600;
-	color:var(--main) ;
+	color: var(--main);
 }
 
 .info_box .buttons {
@@ -94,20 +107,185 @@ body {
 	transition: all 0.3s ease;
 }
 
-.buttons button.restart { 
+.buttons button.restart {
 	color: var(--white);
 	background: var(--main);
 }
 
-.buttons button.restart:hover { 
+.buttons button.restart:hover {
 	background: var(--hover);
 }
 
-.buttons button.quit{ 
+.buttons button.quit {
 	color: var(--main);
 }
 
-.buttons button.quit:hover { 
+.buttons button.quit:hover {
 	color: var(--white);
 	background: var(--main);
+}
+
+/* Quiz box */
+.quiz_box {
+	display: none;
+	width: 55rem;
+	background-color: var(--white);
+	border-radius: 0.5rem;
+}
+
+.quiz_box header {
+	height: 7rem;
+	z-index: 99;
+	padding: 0 0.3rem;
+	background-color: var(--white);
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	border-radius: 0.5rem 0.5rem 0 0;
+	box-shadow: 0 0.3rem 0.5rem 0.1rem rgba(0, 0, 0, 0.1);
+}
+
+.quiz_box header .title {
+	font-size: 2rem;
+	font-weight: 600;
+	padding-left: 2.5rem;
+}
+
+.quiz_box header .timer {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	width: 14.5rem;
+	height: 4.5rem;
+	background-color: var(--timer);
+	border: 0.1rem solid var(--timer-border);
+	border-radius: 0.5rem;
+	padding: 0 0.8rem;
+}
+
+.quiz_box header .time_text {
+	font-weight: 400;
+	font-size: 1.6rem;
+	user-select: none;
+}
+
+.quiz_box header .timer .timer_sec {
+	font-size: 1.8rem;
+	font-weight: 500;
+	background-color: var(--time-text-bg);
+	height: 3rem;
+	width: 4.5rem;
+	color: var(--white);
+	text-align: center;
+	line-height: 3rem;
+	border-radius: 0.5rem;
+	border: 0.1rem solid var(--time-text-bg);
+	user-select: none;
+}
+
+.quiz_box section {
+	padding: 2.5rem 3rem 2rem 3rem;
+	background: var(--white);
+}
+
+.quiz_box section .question_text {
+	font-size: 2.5rem;
+	font-weight: 600;
+}
+
+.quiz_box section .option_list {
+	padding: 2rem 0;
+	display: block;
+}
+
+section .option_list .option {
+	background: aliceblue;
+	border: 0.1rem solid #84c5fe;
+	border-radius: 0.5rem;
+	padding: 0.8rem 1.5rem;
+	margin-bottom: 1.5rem;
+	font-size: 1.6rem;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	cursor: pointer;
+	transition: all 0.3s ease;
+}
+
+section .option_list .option:hover {
+	color: #004085;
+	background: #cce5ff;
+	border-color: #b8daff;
+}
+
+.option_list .option:last-child {
+	margin-bottom: 0rem;
+}
+
+.option_list .option .icon {
+	height: 2.4rem;
+	width: 2.4rem;
+	border: 0.2rem solid transparent;
+	border-radius: 50%;
+	text-align: center;
+	font-size: 1.3rem;
+	line-height: 2.4rem;
+	pointer-events: none;
+}
+
+.option_list .option .icon.tick {
+	color: #23903c;
+	border-color: #23903c;
+	background: #b4edda;
+}
+
+.option_list .option .icon.cross {
+	color: #a4283a;
+	border-color: #a4283a;
+	background: #f8d7da;
+}
+
+/* Footer */
+footer {
+	height: 6rem;
+	padding: 0 3rem;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	border-top: 0.1rem solid var(--border);
+	font-size: 1.4rem;
+}
+
+footer .total_questions span {
+	display: flex;
+	user-select: none;
+	align-items: center;
+}
+
+footer .total_questions span p {
+	font-weight: 600;
+	padding: 0 0.5rem;
+}
+
+footer .total_questions span p:first-child {
+	padding-left: 0rem;
+}
+
+footer .next_btn {
+	height: 4rem;
+	padding: 0 1.3rem;
+	font-size: 1.8rem;
+	font-weight: 400;
+	border: none;
+	outline: none;
+	color: var(--white);
+	background: var(--main);
+	border-radius: 0.5rem;
+	border: 0.1rem solid var(--main);
+	cursor: pointer;
+	transition: all 0.3s ease;
+}
+
+.next_btn:hover {
+	background: var(--hover);
 }
