--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,6 +39,7 @@ body {
 	transform: translate(-50%, -50%);
 	box-shadow: 0 0.4rem 0.8rem 0 rgba(0, 0, 0, 0.2),
 		0 0.6rem 2rem 0 rgba(0, 0, 0, 0.19);
+	transition: all 0.3s ease;
 }
 
 /* Start button */
@@ -65,7 +66,8 @@ body {
 	transform: translate(-50%, -50%) scale(0.9);
 }
 
-.info_box.activeInfo {
+.info_box.activeInfo,
+.quiz_box.activeQuiz {
 	z-index: 5;
 	opacity: 1;
 	pointer-events: auto;
@@ -110,6 +112,7 @@ body {
 	margin: 0 0.5rem;
 	height: 4rem;
 	width: 10rem;
+	outline: none;
 	border: 0.1rem solid var(--main);
 	border-radius: 0.5rem;
 	color: var(--white);
@@ -327,7 +330,7 @@ footer .next_btn {
 	margin-bottom: 1rem;
 }
 
-.result_box .complete_text{
+.result_box .complete_text {
 	font-size: 2rem;
 	font-weight: 500;
 }
@@ -339,7 +342,7 @@ footer .next_btn {
 	font-weight: 400;
 }
 
-.score_text span p { 
+.score_text span p {
 	font-weight: 600;
 	padding: 0 0.4rem;
 }
@@ -349,7 +352,7 @@ footer .next_btn {
 	margin: 2rem 0;
 }
 
-.result_box .buttons button{
+.result_box .buttons button {
 	margin: 0 1rem;
 	height: 4rem;
 	padding: 0 2rem;
@@ -362,6 +365,3 @@ footer .next_btn {
 	cursor: pointer;
 	transition: all 0.3s ease;
 }
-
-
-
