added a for loop that disables pointer events once the user has selected an answer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -274,6 +274,10 @@ section .option_list .option:hover {
 	background: #f8d7da;
 }
 
+.option_list .option.disabled {
+	pointer-events: none;
+}
+
 /* Footer */
 footer {
 	height: 6rem;
