Adding a countdown timer, which pauses on selecting an answer, with a time bar that fills as the tiime counts down.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -200,6 +200,17 @@ body {
 	user-select: none;
 }
 
+.quiz_box header {
+    position: relative;
+}
+.quiz_box header .time_line {
+	position: absolute;
+	bottom: 0;
+	left: 0rem;
+	height: 0.3rem;
+	background: var(--main);
+}
+
 .quiz_box section {
 	padding: 2.5rem 3rem 2rem 3rem;
 	background: var(--white);
@@ -305,6 +316,7 @@ footer .total_questions span p:first-child {
 }
 
 footer .next_btn {
+	display: none;
 	height: 4rem;
 	padding: 0 1.3rem;
 	font-size: 1.8rem;
