--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,20 +123,20 @@ body {
 	transition: all 0.3s ease;
 }
 
-.buttons button.restart {
+.buttons button.restart, .buttons button.back {
 	color: var(--white);
 	background: var(--main);
 }
 
-.buttons button.restart:hover {
+.buttons button.restart:hover, .buttons button.back:hover {
 	background: var(--hover);
 }
 
-.buttons button.quit {
+.buttons button.quit, .buttons button.scores, .buttons button.clear {
 	color: var(--main);
 }
 
-.buttons button.quit:hover {
+.buttons button.quit:hover, .buttons button.scores:hover, .buttons button.clear:hover {
 	color: var(--white);
 	background: var(--main);
 }
@@ -377,17 +377,24 @@ footer .next_btn {
 }
 
 .result_box .buttons {
+	height: 6rem;
 	display: flex;
-	margin: 2rem 0;
+	align-items: center;
+	justify-content: flex-end;
+	padding: 0 3.5rem;
 }
 
 .result_box .buttons button {
-	margin: 0 1rem;
-	height: 4rem;
-	padding: 0 2rem;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin: 0 0.5rem;
+	height: 5rem;
+	width: 10rem;
+	padding: 0 3.5rem;
 	border: none;
 	outline: none;
-	font-size: 1.8rem;
+	font-size: 1.6rem;
 	font-weight: 500;
 	border-radius: 0.5rem;
 	border: 0.1rem solid var(--main);
